--- a/index.html
+++ b/index.html
@@ -265,6 +265,6 @@
         </div>
       </section>
     
-    <script type="module" src="main.js/main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
