--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <body>
     <div class="grid-container">
       <nav class="menu" data-menu="suave">
-        <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+        <button data-menu="button" aria-expanded="false" aria-controls="menu">
+          Menu
+        </button>
         <ul data-menu="list" id="menu">
           <li><a href="#animais">Animais</a></li>
           <li data-dropdown>
@@ -229,15 +231,39 @@
         </dl>
       </section>
 
+      <section class="grid-section galeria" data-anime="scroll">
+        <ul class="custom-controls">
+          <li><img src="img/slide/foto1-thumb.jpg" alt="" /></li>
+          <li><img src="img/slide/foto2-thumb.jpg" alt="" /></li>
+          <li><img src="img/slide/foto3-thumb.jpg" alt="" /></li>
+          <li><img src="img/slide/foto4-thumb.jpg" alt="" /></li>
+          <li><img src="img/slide/foto5-thumb.jpg" alt="" /></li>
+          <li><img src="img/slide/foto6-thumb.jpg" alt="" /></li>
+        </ul>
+        <div class="slide-wrapper">
+          <ul class="slide">
+            <li><img src="img/slide/foto1.jpg" alt="" /></li>
+            <li><img src="img/slide/foto2.jpg" alt="" /></li>
+            <li><img src="img/slide/foto3.jpg" alt="" /></li>
+            <li><img src="img/slide/foto4.jpg" alt="" /></li>
+            <li><img src="img/slide/foto5.jpg" alt="" /></li>
+            <li><img src="img/slide/foto6.jpg" alt="" /></li>
+          </ul>
+        </div>
+      </section>
+
       <section class="grid-section numeros" data-anime="scroll">
         <h1 class="titulo">Números</h1>
-        <div class="numeros-grid">
-        </div>
+        <div class="numeros-grid"></div>
       </section>
 
       <section class="grid-section contato" data-anime="scroll" id="contato">
         <h1 class="titulo">Contato</h1>
-        <div class="mapa" data-tooltip aria-label="Endereço próximo ao estacionamento">
+        <div
+          class="mapa"
+          data-tooltip
+          aria-label="Endereço próximo ao estacionamento"
+        >
           <img src="img/mapa.png" />
         </div>
         <ul class="dados">
@@ -246,8 +272,9 @@
           <li>Rua do Conde, nº 21</li>
           <li>Rio de Janeiro - RJ</li>
           <li>Doe <span class="btc-preco">0</span> bitcoin para nos ajudar</li>
-          <li data-semana="1,2,3,4,5" data-horario="8,18">Seg à Sex das 8 às 18</li>
-
+          <li data-semana="1,2,3,4,5" data-horario="8,18">
+            Seg à Sex das 8 às 18
+          </li>
         </ul>
       </section>
 
@@ -256,20 +283,20 @@
       </footer>
     </div>
 
-      <section class="modal-container" data-modal="container">
-        <div class="modal">
-          <button data-modal="fechar" class="fechar">X</button>
-          <form action="">
-            <label for="email">Email</label>
-            <input type="text" for="email" id="email" />
+    <section class="modal-container" data-modal="container">
+      <div class="modal">
+        <button data-modal="fechar" class="fechar">X</button>
+        <form action="">
+          <label for="email">Email</label>
+          <input type="text" for="email" id="email" />
 
-            <label for="senha">Senha</label>
-            <input type="password" for="senha" id="senha" />
-            <button type="submit">Entrar</button>
-          </form>
-        </div>
-      </section>
-    
+          <label for="senha">Senha</label>
+          <input type="password" for="senha" id="senha" />
+          <button type="submit">Entrar</button>
+        </form>
+      </div>
+    </section>
+
     <script type="module" src="main.js"></script>
   </body>
 </html>
